Optimized Docker build and switched to submodules
Replaced manual git clone with submodules and improved layer caching for faster package installation.

--- a/1.Api from Nest app/Dockerfile
+++ b/1.Api from Nest app/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14-alpine AS build
-RUN apk add --no-cache git
 WORKDIR /opt/app
-RUN git clone https://github.com/AlariCode/docker-demo.git .
-RUN npm install && npm run build api
+COPY ./src/*.json .
+RUN npm install
+COPY ./src .
+RUN npm run build api
 CMD ["node", "./dist/apps/api/main.js"]
